--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -84,6 +84,9 @@
     <div class="small-4 columns img3 animated slideInDown">
       <%= link_to image_tag('darestan.jpg'), "http://test.darestan.ir", :target => "_blank" %>
     </div>
+    <div class="small-4 columns img4 animated slideInDown">
+      <%= link_to image_tag('worldcup2014.jpg'), "http://worldcup-2014.herokuapp.com/", :target => "_blank" %>
+    </div>
   </div>
 </div>
 <div class="section">
