--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <meta name="description" content="طراحی و توسعه وب سایت و وب اپلیکیشن با استفاده روبی ان ریلز، جاوا اسکریپت."/>
   <meta name="keywords" content="طراحی و برنامه نویسی وب,وب اپلیکیشن, Web Application,Ruby on Rails,Jquery,HTML,CSS,XML,JavaScript"/>
   <meta name="author" content="Abolfazl Mahmoodi"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <title><%= content_for?(:title) ? yield(:title) : "طراحی و توسعه وب" %></title>
 
