--- a/app/views/blog/articles/show.html.haml
+++ b/app/views/blog/articles/show.html.haml
@@ -1,6 +1,10 @@
-%article
-  %h1= @article.title
-  = render partial: "meta", locals: { article: @article }
-  = preserve_markdown @article.content
-  %hr
-  %p.action= link_to "← Back to Overview", blog_articles_path
+= render 'layouts/navigation'
+.row.post
+  #post-body
+    %article
+      %h1= @article.title
+      = render partial: "meta", locals: { article: @article }
+      %hr
+      = preserve_markdown @article.content
+      %hr
+      %p.action= link_to "بازگشت", blog_articles_path
