--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -505,6 +505,8 @@ section.sec-art:hover {
   font-size: 11px;
 }
 
+#post-body h4 a{font-family:byekan; font-size:20px}
+
 pre {
   background-color: #F3F3F3;
   border: solid 1px #CCC;
