--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -513,6 +513,7 @@ pre {
   padding: 5px 10px;
   font-family: 'Menlo', 'Courier New', 'Terminal', monospace;
   direction: ltr;
+  font-size: 12px;
 }
 
 code {
