--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,4 +15,5 @@
 
     <%= link_to 'بازگشت', posts_path, class: 'button btn tiny btn-primary' %>
   </div>
+  <%= render 'disqus/thread' %>
 </div>
