--- a/app/views/disqus/_thread.html.erb
+++ b/app/views/disqus/_thread.html.erb
@@ -2,15 +2,13 @@
 
 <div id="disqus_thread"></div>
     <script type="text/javascript">
-        var disqus_shortname = '<%= Post::DISQUS_SHORTNAME %>';
+        var disqus_shortname = 'rubywebit';
     	var disqus_identifier = '<%= @post.id %>';
-    	var disqus_url = '<%= url_for("posts/#{@post.id}") %>';
-    	var disqus_developer = 1;
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
+        	var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        	dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+        	(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    	})();
     </script>
