--- a/app/views/blog/articles/show.html.haml
+++ b/app/views/blog/articles/show.html.haml
@@ -6,5 +6,6 @@
       = render partial: "meta", locals: { article: @article }
       %hr
       = preserve_markdown((@article.content).gsub(/<!--more-->/, ''))
+      = render 'disqus/article'
       %hr
       %p.action= link_to "بازگشت", blog_articles_path
