--- a/app/views/disqus/_article.html.erb
+++ b/app/views/disqus/_article.html.erb
@@ -1,7 +1,7 @@
 <div id="disqus_thread"></div>
     <script type="text/javascript">
         var disqus_shortname = 'rubywebit';
-    	var disqus_identifier = '<%= @article.id %>';
+    	var disqus_identifier = '<%= @article.permalink %>';
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
