--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -241,8 +241,8 @@ textarea {
 }
 
 #post-body p {
-  font-family: tahoma;
-  font-size: 13px;
+  font-family: byekan;
+  font-size: 14px;
   text-decoration: none;
 }
 #post-body a {
