--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -246,8 +246,8 @@ textarea {
   text-decoration: none;
 }
 #post-body a {
-  font-family: tahoma;
-  font-size: 12px;
+  font-family: byekan;
+  font-size: 14px;
   text-decoration: none;
 }
 
