--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -82,7 +82,8 @@
       <%= link_to image_tag('zamin.jpg'), "http://zamin.darestan.ir", :target => "_blank" %>
     </div>
     <div class="small-3 columns img3 animated slideInDown">
-      <%= link_to image_tag('darestan.jpg'), "http://darestan.ir", :target => "_blank" %>
+      <%= link_to image_tag('darestan.jpg'), "http://www.darestan.ir",
+                  :target => "_blank" %>
     </div>
     <div class="small-3 columns img4 animated slideInDown">
       <%= link_to image_tag('worldcup2014.jpg'), "http://worldcup-2014.herokuapp.com/", :target => "_blank" %>
