--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,8 @@
  *= require_tree .
  */
 
+@import "foundation_and_overrides";
+
 @font-face {
   font-family: 'BYekan';
   src: url('BYekan.eot?#') format('eot'),  /* IE6–8 */
